# TestTask

./: CMakeLists.txt
Source/: istorage.h  main.cpp  sqlitestorage.cpp  sqlitestorage.h  treemodel.cpp  treemodel.h  treeviewstyle.cpp  treeviewstyleditemdelegate.cpp  treeviewstyleditemdelegate.h
